--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@tailwindcss/vite": "^4.1.4",
     "aos": "^2.3.4",
     "astro": "^5.7.4",
+    "resend": "^4.4.1",
     "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.7"
   }
 }
